# it-asset

./: .env.example  .env.prod.example  .gitignore  ARCH_REVIEW_2026-05-24.md  DEPLOY.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  celerybeat-schedule  pyproject.toml
backend/app/: cache.py  config.py  db.py  deps.py  main.py  models.py  seed_demo.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  35640a9085ca_inspection_tables.py  a3e1b7402aaf_users_and_departments.py  a4d7e9c1b6f2_receipt_ack.py  a51b2fe67785_approval_requests.py  a7c4e1b9f3d2_lottery_tier.py  a7c91d4e2b8f_asset_type_icon_color.py  a8fdb11311bc_inventory_tables.py  b7f3a1c2d4e5_category_code_and_sku_counter.py  b8d3c5e1f0a2_offboarding.py  b8d5f2a1c9e3_role_hr.py  c64bfdcd739b_asset_ledger_tables.py  c8e2d9a4b1f0_users_password_hash.py  c9e4d6f2a1b3_offboarding_notified_at.py  c9e6f3b2a1d4_lottery_prize_stockout.py  d1f7a9c4e2b6_lottery_notified.py  (+8 more)
backend/app/core/: audit.py  request_context.py  security.py  storage.py
backend/app/lark/: cards.py  client.py  receipts.py  security.py  ws_client.py
backend/tests/: test_approvals.py  test_assets.py  test_auth.py  test_config_guard.py  test_contact_sync.py  test_dashboard.py  test_health.py  test_inspections.py  test_inventory.py  test_lark_client.py  test_lark_security.py  test_lottery.py  test_matching.py  test_migration.py  test_offboarding.py  test_receipts.py  test_repair_workflow.py  test_scrap_workflow.py  test_smoke_e2e.py
(+143 files in other folders)
